// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Web Component With Betonline Theme 1`] = `
<section
  class="storybook-snapshot-container"
>
   
  <div
    class="hello-world-container svelte-e6fbkx"
  >
    <p
      class="svelte-e6fbkx"
    >
      Hello 
      betonline
      !
    </p>
     
    <form>
      <div
        class="form-group"
      >
        <label
          for="email"
        >
          Email address
        </label>
         
        <input
          aria-describedby="emailHelp"
          class="form-control"
          id="email"
          type="email"
        />
         
        <small
          class="form-text text-muted"
          id="emailHelp"
        >
          We'll never share your email with anyone else.
        </small>
      </div>
       
      <div
        class="form-group"
      >
        <label
          for="password"
        >
          Password
        </label>
         
        <input
          class="form-control"
          id="password"
          type="password"
        />
      </div>
       
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</section>
`;

exports[`Storyshots Web Component With Wild Theme 1`] = `
<section
  class="storybook-snapshot-container"
>
   
  <div
    class="hello-world-container svelte-e6fbkx"
  >
    <p
      class="svelte-e6fbkx"
    >
      Hello 
      wild
      !
    </p>
     
    <form>
      <div
        class="form-group"
      >
        <label
          for="email"
        >
          Email address
        </label>
         
        <input
          aria-describedby="emailHelp"
          class="form-control"
          id="email"
          type="email"
        />
         
        <small
          class="form-text text-muted"
          id="emailHelp"
        >
          We'll never share your email with anyone else.
        </small>
      </div>
       
      <div
        class="form-group"
      >
        <label
          for="password"
        >
          Password
        </label>
         
        <input
          class="form-control"
          id="password"
          type="password"
        />
      </div>
       
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</section>
`;

exports[`Storyshots components/NestedElement Submit Action 1`] = `
<section
  class="storybook-snapshot-container"
>
  <form>
    <div
      class="form-group"
    >
      <label
        for="email"
      >
        Email address
      </label>
       
      <input
        aria-describedby="emailHelp"
        class="form-control"
        id="email"
        type="email"
      />
       
      <small
        class="form-text text-muted"
        id="emailHelp"
      >
        We'll never share your email with anyone else.
      </small>
    </div>
     
    <div
      class="form-group"
    >
      <label
        for="password"
      >
        Password
      </label>
       
      <input
        class="form-control"
        id="password"
        type="password"
      />
    </div>
     
    <button
      class="btn btn-primary"
      type="submit"
    >
      Submit
    </button>
  </form>
</section>
`;
